testdata/ttcn3-conformance-tests/ATS/core_language/06_types_and_values/0602_structured_types_and_values/0602_toplevel/NegSem_0602_TopLevel_010.ttcn
/***************************************************
 ** @author   STF 572
 ** @version  0.0.1
 ** @purpose  1:6.2, Ensure that mixed list and assignment notation are evaluated correctly
 ** @verdict  pass reject
 ***************************************************/

// The following requirement is tested:
/* It is allowed to mix the two value notations in the same (immediate)
 * context only in such a way that elements in list notation do not follow
 * elements in assignment notation.
 * */

module NegSem_0602_TopLevel_010 {

    type record MyRecordType{
        integer field1,
        integer field2,
        integer field3
    }
        type component GeneralComp {
    }

    type component GeneralComp {
    }

testcase TC_NegSem_0602_TopLevel_010() runs on GeneralComp {

    var MyRecordType v_r := {1, field3 := 3 , 2  };  // error: assignment notation after list notification,


     if ( match(v_r, {1,2,3})) {
            setverdict(pass);
        }
    else{
        setverdict(fail);
    }
}
    control {
        execute(TC_NegSem_0602_TopLevel_010());
    }
}